--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
             "styles": [
               "src/styles.scss"
             ],
+            "webWorkerTsConfig": "tsconfig.worker.json",
             "scripts": []
           },
           "configurations": {
